@@ -3,14 +3,12 @@ package org.suree.service;
 import org.apache.http.HttpResponse;
 import org.apache.http.client.HttpClient;
 import org.apache.http.client.methods.HttpGet;
-import org.apache.http.impl.client.HttpClientBuilder;
+import org.apache.http.impl.client.DefaultHttpClient;
 import org.springframework.stereotype.Service;
 
 
 import java.io.BufferedReader;
 import java.io.InputStreamReader;
-import java.net.HttpURLConnection;
-import java.net.URI;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Iterator;
@@ -28,17 +26,17 @@ public class RemotePaifuParseService {
         if (logCodes == null || logCodes.isEmpty()) {
             return new ArrayList<String>();
         }
-        String path = "http://tenhou.net/0/log/?";
+        String path = "http://e.mjv.jp/0/log/?";
         Iterator ic = logCodes.iterator();
         List<String> xmls = new ArrayList<String>();
         try {
 
-            HttpClient client = HttpClientBuilder.create().build();
+            HttpClient httpclient = new DefaultHttpClient();
             while (ic.hasNext()) {
                 String tempPath = path + ic.next();
-                URI url = new URI(tempPath);
-                HttpGet request = new HttpGet(url);
-                HttpResponse response = client.execute(request);
+                URL url = new URL(tempPath);
+                HttpGet request = new HttpGet(tempPath);
+                HttpResponse response = httpclient.execute(request);
 
                 BufferedReader rd = new BufferedReader(
                         new InputStreamReader(response.getEntity().getContent()));
